[JENKINS-38865] First work on separating ModelAST.